--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'common-api'
 include 'jira-connector'
 include 'bugzilla-connector'
 include 'confluence-connector'
+include 'github-connector'
 include 'issues-processor'
 include 'documentation-processor'
 include 'confluence-processor'
